--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
             </tr>
         </table>
 
-        <h3><a href="D:\web dev\HTML -  Personal Site\hobbies.html">Hobbies</a></h3>
+        <h3><a href="hobbies.html">Hobbies</a></h3><br>
+        <hr>
+        <h3><a href="contact-me.html">Contact Me</a></h3>
         <hr>
 
     </body>
